Fix android app download button on mobile

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1124,6 +1124,12 @@ html.active {
       .ios {
         margin-bottom: 20px;
       }
+      .android {
+        width: 93%;
+        img {
+          margin: 0;
+        }
+      }
     }
     .img {
       top: 0 !important;
